# MicroserviceLibrarySystem

./: CMakeLists.txt  vcpkg.json
Aggregator/: CMakeLists.txt  app-config.json  configuration-helper.hpp  main.cpp  queue-map.hpp
ApiGateway/: CMakeLists.txt  main.cpp
UserMicroService/: CMakeLists.txt  main.cpp
UserMicroService/Application/: user-application-service.hpp
UserMicroService/Domain/: User.hpp  user-factory.hpp  user-repository.hpp  user-service.hpp  user.hpp
UserMicroService/Infrastructure/: db-connection.hpp
aggregator/: CMakeLists.txt  action-info.hpp  aggregator-listener.hpp  configuration-helper.hpp  main.cpp  queue-map.hpp
api-gateway/: CMakeLists.txt  http-listener.hpp  main.cpp
infrastructure/: message-dto.hpp  nlohmann-extensions.hpp  rabbit-mq-adapter.hpp  rabbit-mq-connection-handler.hpp  response-dto.hpp  utility.hpp
microservices/library-management/: CMakeLists.txt  main.cpp  message-listener.hpp
microservices/library-management/application/: book-application-service.hpp
microservices/library-management/domain/: book-factory.hpp  book-repository.hpp  book-service.hpp  book.hpp
microservices/library-management/domain/value-object/: user-info.hpp
microservices/library-management/dtos/request/book/: create-book-request.hpp  update-book-request.hpp
microservices/library-management/dtos/request/user-info/: user-info-request.hpp
microservices/library-management/dtos/response/book/: book-by-id-response.hpp  book-by-id-with-users-response.hpp  book-list-response.hpp  book-response.hpp  books-with-users-response.hpp  create-book-response.hpp  deliver-book-request.hpp  user-book-list-response.hpp
microservices/library-management/dtos/response/user-info/: user-info-response.hpp
microservices/library-management/infrustructure/: db-connection.hpp
microservices/user-management/: CMakeLists.txt  main.cpp  message-listener.hpp
microservices/user-management/application/: user-application-service.hpp
microservices/user-management/domain/: user-factory.hpp  user-repository.hpp  user-service.hpp  user.hpp
microservices/user-management/dtos/request/user/: create-user-request-dto.hpp  create-user-request.hpp  update-user-request-dto.hpp  update-user-request.hpp
microservices/user-management/dtos/response/user/: create-user-response-dto.hpp  create-user-response.hpp  result-user-by-id-response-dto.hpp  result-user-response-dto.hpp  user-by-id-response.hpp  user-list-response.hpp  user-response.hpp
microservices/user-management/infrastructure/: db-connection.hpp
microservices/user-microservice/: CMakeLists.txt  main.cpp
microservices/user-microservice/application/: user-application-service.hpp
microservices/user-microservice/domain/: user-factory.hpp  user-service.hpp  user.hpp
